# GGCE

./: ._submit.py  .coveragerc  .flake8  .gitignore  AUTHORS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  README.rst  build_sphinx.sh  genpack.ipynb  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  run.py  setup.cfg  setup.py  submit.py  test_file.txt
.github/: .codecov.yml  codecov.yml
.github/workflows/: ci.yml  ci_petsc.yml  draft-pdf.yml
benchmarking/: .gitignore  README.md  mat_inv.py  speedtest.py
benchmarks/: benchmark_petsc.py  check_mem_eff.py  check_spectrum_code.py  optimal_parallel_scheme.py  reliability_petsc.py  reliability_petsc_gs_energy.py  repr_fig7_tfd.py  speed_benchmark_petsc.py  speed_petsc_cf_serial.py  stress_test_petsc.py
docs/: requirements_sphinx.txt
docs/source/: conf.py  executors.rst  ggce.rst  index.rst  installation.rst  min_versions.rst  modules.rst  overview.rst  project.rst  (+2 more)
examples/: 000_Tutorial.ipynb  000_example_A.txt  001_ParallelExecutors.py  001_Tutorial.py  002_PETSc_direct_mumps.py  002_PETSc_simple_example.py  003_PETSc_iterative_gmres.py  004_finite_T_HP_test.py
ggce/: __init__.py  _version.py  analyze.py  analyze2.py  analyze3.py  analyze4.py  equations.py  executor.py  executors.py  logger.py  model.py  models.py  overlord.py  physics.py  structures.py  system.py  terms.py
ggce2/: model.py
inp/: .gitignore
notebooks/: GGCE_Tutorial.ipynb
old_tests/: test_literature.py  test_prime.py  test_terms.py
scripts/: HfT_pol_disp.py  README.rst  T0.txt  Tepsilon.txt  fit_lorentz_scipy.py  install.sh  install_requirements_old.sh  matt_test.py  petsc_test_h_pl_p_at_fin_t.py  test_h_pl_p_at_fin_t.py  update_version.sh
tests/: test_literature.py
(+82 files in other folders)
